--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -84,7 +84,11 @@
   <ItemGroup>
     <ClInclude Include="AbstractFactory.h" />
     <ClInclude Include="Adapter.h" />
+    <ClInclude Include="Bridge.h" />
     <ClInclude Include="Builder.h" />
+    <ClInclude Include="Chain.h" />
+    <ClInclude Include="Command.h" />
+    <ClInclude Include="Composite.h" />
     <ClInclude Include="Decorate.h" />
     <ClInclude Include="Facade.h" />
     <ClInclude Include="Factory.h" />
@@ -92,6 +96,7 @@
     <ClInclude Include="Observer.h" />
     <ClInclude Include="Prototype.h" />
     <ClInclude Include="Proxy.h" />
+    <ClInclude Include="Singleton.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="Template.h" />
   </ItemGroup>
