--- a/ConsoleApplication1/ConsoleApplication1.vcxproj
+++ b/ConsoleApplication1/ConsoleApplication1.vcxproj
@@ -92,6 +92,9 @@
     <ClInclude Include="Decorate.h" />
     <ClInclude Include="Facade.h" />
     <ClInclude Include="Factory.h" />
+    <ClInclude Include="Flyweight.h" />
+    <ClInclude Include="Interpreter.h" />
+    <ClInclude Include="Mediator.h" />
     <ClInclude Include="Memento.h" />
     <ClInclude Include="Observer.h" />
     <ClInclude Include="Prototype.h" />
@@ -99,6 +102,7 @@
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="State.h" />
     <ClInclude Include="Template.h" />
+    <ClInclude Include="Visitor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
